# Multiclient-Server-Secure-Chat-Application

./: .gitignore  CMakeLists.txt  README.md
client/: client.cpp  runclient.cpp
clientservermodel/client/: client.h  runclient.cpp
clientservermodel/logs/: clientlog.txt  serverlog.txt
clientservermodel/server/: runserver.cpp  server.cpp  server.h
encryption/: cypher.cpp  cypher.h
file/: fileIO.cpp  fileIO.h
logs/: clientlog.txt  serverlog.txt
multiclientmodel/client/: client.cpp  client.h  main.cpp
multiclientmodel/logs/: serverlog.txt
multiclientmodel/server/: main.cpp  server.cpp  server.h
server/: runserver.cpp
